book/tests/snapshots/snapshot__run_display_reference_prql@transforms__group-1.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/transforms/group-1.prql
---
from employees
sort join_date
take 1



