book/tests/snapshots/snapshot__run_display_reference_prql@transforms__join-0.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/transforms/join-0.prql
---
from employees
join side:left positions [employees.id == positions.employee_id]



