book/tests/snapshots/snapshot__run_display_reference_prql@transforms__join-2.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/transforms/join-2.prql
---
from employees
join positions [==emp_no]



