book/tests/snapshots/snapshot__run_display_reference_prql@transforms__select-2.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/transforms/select-2.prql
---
from employees
select first_name



