book/tests/snapshots/snapshot__run_display_reference_prql@transforms__select-4.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/transforms/select-4.prql
---
from e = employees
select e.first_name
derive fn = first_name



